--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </header>
             <main>
                 <div class="hero-container">
-                    <div class="hero-placeholder">
+                    <div class="hero-mobile">
                         <img class="mobile-image" src="img/hero-object-sales-report-mobile.png" alt="mobileHotmart" > 
                     </div>
                     <div class="hero-content">
